working example for gearbits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "mdk": {
         "modName": "itemrando",
         "extraModNames": [
-            // "bugcon"
+            "bugcon"
+            // "balloons"
             // "greendrifter"
         ]
     },
