- Reorganized the mod structure - added handling for boss gearbit numbers - implemented usage of linkID array for gearbits held by enemies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SRC
     src/moddef.c
     src/crate.c
     src/logic.c
+    src/vanilla_handler.c
 )
 
 # Prepare mod information for inclusion in ModInfo.json.
