- updated readme and version - updated comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "mdk": {
         "modName": "itemrando",
         "extraModNames": [
-            "bugcon"
+            // "bugcon"
             // "balloons"
             // "greendrifter"
         ]
