added new configuration options  - changing alarm indexes is supported  - resolved some naming inconsistencies  - moved enable flag to options struct  - incremented minor version for release

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,8 @@
         "modpack",
         "type",
         "randomizer",
-        "didnt"
+        "didnt",
+        "rando",
+        "skele"
     ],
 }
