--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.12)
 
 # Define project.
 project(         "itemrando" # Mod name (required)
-    VERSION      "0.2.0" # Mod version (required)
+    VERSION      "0.3.0" # Mod version (required)
     DESCRIPTION  "" # Mod description (optional)
     HOMEPAGE_URL "" # Mod homepage (optional)
     LANGUAGES C
 )
 set(PROJECT_MINIMUM_MRE_VERSION # Mod minimum MRE version (optional)
-    ""
+    "1.5.1"
 )
 set(PROJECT_AUTHORS # List of mod authors (optional)
     "Nemean_Lion732"
@@ -20,6 +20,8 @@ set(SRC
     src/crate.c
     src/logic.c
     src/vanilla_handler.c
+    src/indicator.c
+    src/options.c
 )
 
 # Prepare mod information for inclusion in ModInfo.json.
